--- a/MyAwesomeApp/springboot-lb.yaml
+++ b/MyAwesomeApp/springboot-lb.yaml
@@ -34,3 +34,21 @@ spec:
       port: 8085
       targetPort: 8085
       name: http
+
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: maxweather-ingress
+  namespace: nginx-ingress
+spec:
+  rules:
+  - http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: angular-app-svc
+            port:
+              number: 8085
