--- a/MyAwesomeApp/springboot-lb.yaml
+++ b/MyAwesomeApp/springboot-lb.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: my-ak-deployment
+  name: maxweather-deployment
   namespace: nginx-ingress
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: angular-app
+      app: maxweather-app
   template:
     metadata:
       labels:
-        app: angular-app
+        app: maxweather-app
     spec:
       containers:
-      - name: my-angular-app
+      - name: maxweather-app
         image: sajeeval/myawesomeapp:latest
         imagePullPolicy: Always
         ports:
@@ -24,11 +24,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: angular-app-svc
+  name: maxweather-app-svc
   namespace: nginx-ingress
 spec:
   selector:
-    app: angular-app
+    app: maxweather-app
   ports:
     - protocol: TCP
       port: 8085
@@ -36,19 +36,17 @@ spec:
       name: http
 
 ---
-apiVersion: networking.k8s.io/v1
+apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: maxweather-ingress
   namespace: nginx-ingress
 spec:
   rules:
-  - http:
+  - host: maxweather.com 
+    http:
       paths:
       - path: /
-        pathType: Prefix
         backend:
-          service:
-            name: angular-app-svc
-            port:
-              number: 8085
+          serviceName: maxweather-app-svc
+          servicePort: 8085
