--- a/MyAwesomeApp/springboot-lb.yaml
+++ b/MyAwesomeApp/springboot-lb.yaml
@@ -43,8 +43,8 @@ metadata:
   namespace: nginx-ingress
 spec:
   rules:
-  - host: maxweather.com 
-    http:
+#  - host: maxweather.com 
+   - http:
       paths:
       - path: /
         backend:
